More tests added and landing page tagline changed

--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -53,9 +53,11 @@ div
 .display-1 {
     color: var(--primary-color);
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
 
-
-
+.display-6 {
+    color: var(--tertiary-color);
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 h1{
